--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,9 +3,11 @@
   display: flex;
   flex-direction: column;
   width: 200px;
-  height: 200px;
+  height: 350px;
   user-select: none;
   cursor: default;
+  border-radius: 8px;
+  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
 
 .react-colorful__saturation {
@@ -16,6 +18,133 @@
   border-radius: 8px 8px 0 0;
   background-image: linear-gradient(to top, #000, rgba(0, 0, 0, 0)),
     linear-gradient(to right, #fff, rgba(255, 255, 255, 0));
+}
+
+.react-colorful__hex-input-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px;
+  background-color: #fff;
+  font-size: 14px;
+  border-block: 1px solid #ccc;
+}
+
+.react-colorful__hex-input-container input {
+  width: 70%;
+  padding: 4px 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  outline: none;
+}
+
+.react-colorful__hex-input-container label {
+  color: #000;
+  white-space: nowrap;
+  width: 40px;
+  padding-left: 16px;
+}
+
+.react-colorful__swatches {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  flex-grow: 0;
+  flex-shrink: 0;
+  background-color: #fff;
+  padding-block: 8px;
+}
+
+.react-colorful__swatch-button {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  margin: 4px;
+  padding: 0;
+  border-radius: 4px;
+  background-color: transparent;
+  cursor: pointer;
+  outline: none;
+}
+
+.react-colorful__swatch-button:hover {
+  box-shadow: 0 0 0 1px #000;
+}
+.react-colorful__swatch-button:focus {
+  box-shadow: 0 0 0 1px #000, 0 0 0 1px #000;
+}
+
+.react-colorful__toggle-options {
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
+  padding: 8px;
+  background-color: #fff;
+  color: #000;
+}
+
+.react-colorful__toggle-option:not(:last-child) {
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 4px;
+}
+
+.react-colorful__toggle-option:last-child {
+  padding-top: 4px;
+}
+
+.react-colorful__toggle-option {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-grow: 1;
+  padding-inline: 18px;
+  cursor: pointer;
+}
+
+.react-colorful__toggle-option label:hover {
+  color: #000;
+}
+
+.react-colorful__toggle-option label input {
+  margin-right: 4px;
+}
+
+.react-colorful__toggle-option input {
+}
+
+.react-colorful__action-buttons {
+  display: flex;
+  flex-grow: 0;
+  flex-shrink: 0;
+  padding: 8px;
+  background-color: #fff;
+  border-radius: 0 0 8px 8px;
+  font-size: 14px;
+}
+
+.react-colorful__action-buttons button {
+  flex-grow: 1;
+  margin: 0 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4px 0;
+  height: 25px;
+  border: none;
+  border-radius: 4px;
+  background-color: rgba(130, 150, 174, 0.33);
+  cursor: pointer;
+  outline: none;
+}
+
+.react-colorful__action-buttons button:disabled {
+  opacity: 0.5;
+  cursor: default;
+}
+
+.react-colorful__action-buttons button:hover {
+  background-color: #f0f0f0;
 }
 
 .react-colorful__pointer-fill,
